# mxtodo

./: .gitignore  CHANGELOG.md  Eldev  README.md  mxtodo.el  todo-search.el
.github/workflows/: blank.yml  ci.yml
mxtodo-searcher/: Cargo.toml  Cross.toml
mxtodo-searcher/.cargo/: config
mxtodo-searcher/src/: lib.rs  main.rs
test/: test.el
