[package]
name = "mxtodo_searcher"
version = "0.2.2"
authors = ["Robert Voyer <robert.voyer@gmail.com>"]
edition = "2018"
description = "A very purpose-built library that uses ripgrep to search for TODO items in a directory of Markdown files."
license = "GPL-3.0-or-later"
repository = "https://github.com/rlvoyer/mxtodo"

[lib]
crate-type = ["lib", "cdylib"]
name = "mxtodo_searcher"
path = "src/lib.rs"

[[bin]]
name = "mxtodo_search"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.20", features = ["serde"] }
clap = { version = "3.0.0-beta.5", features = ["derive"] }
comp = "0.2.1"
emacs = "0.18"
failure = "0.1.1"
grep = "0.2.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = "1.0.59"
serde_json = "1.0.59"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.2.0"
